# agent-op

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  main.py  schemas.py  server.py
benchmarks/: README.md  paper_repro_benchmark.json
data/: paper_code_identity_overrides.json
docs/: architecture.md  safety-policy.md
examples/: cursor.mcp.json  sample-output-snippets.json  sample-requests.json
reports/: archived_collision_regression_benchmark_report.json  archived_collision_regression_benchmark_report.md  archived_official_collision_smoke_benchmark_report.json  archived_official_collision_smoke_benchmark_report.md  benchmark_report.json  benchmark_report.md  benchmark_stabilization_summary.md  candidate_score_audit.md  case_studies.md  case_studies_smoke.md  error_analysis.md  final_recall_smoke_benchmark_report.json  final_recall_smoke_benchmark_report.md  fork_tiebreaker_pair_benchmark_report.json  fork_tiebreaker_pair_benchmark_report.md  fork_tiebreaker_smoke_benchmark_report.json  fork_tiebreaker_smoke_benchmark_report.md  identity_benchmark_report.json  identity_benchmark_report.md  identity_guard_smoke_benchmark_report.json  identity_guard_smoke_benchmark_report.md  identity_round2_benchmark_report.json  identity_round2_benchmark_report.md  identity_round3_benchmark_report.json  identity_round3_benchmark_report.md  identity_round3_redirect_benchmark_report.json  identity_round3_redirect_benchmark_report.md  live_recall_drift_diagnostics.json  live_recall_drift_diagnostics.md  live_recall_stability.json  (+20 more)
(+38 files in other folders)
